WebCore/wml/WMLInputElement.h
@@ -88,6 +88,9 @@ public:
 
     bool isConformedToInputMask(const String&);
     bool isConformedToInputMask(UChar, unsigned, bool isUserInput = true);
+#if ENABLE(WCSS)
+    virtual InputElementData data() const { return m_data; }
+#endif
 
 private:
     friend class WMLCardElement;
